// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundler.updateArtifacts() Docker .ruby-version 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "Updated Gemfile.lock",
      "name": "Gemfile.lock",
    },
  },
]
`;

exports[`bundler.updateArtifacts() Docker .ruby-version 2`] = `
Array [
  Object {
    "cmd": "docker run --rm -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -w \\"/tmp/github/some/repo\\" renovate/ruby:1.2.0 bash -l -c \\"ruby --version && gem install bundler --no-document && bundle lock --update \\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;

exports[`bundler.updateArtifacts() Docker compatibility options 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "Updated Gemfile.lock",
      "name": "Gemfile.lock",
    },
  },
]
`;

exports[`bundler.updateArtifacts() Docker compatibility options 2`] = `
Array [
  Object {
    "cmd": "docker run --rm --user=foobar -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -w \\"/tmp/github/some/repo\\" renovate/ruby:latest bash -l -c \\"ruby --version && gem install bundler -v 3.2.1 --no-document && bundle lock --update \\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;

exports[`bundler.updateArtifacts() returns null if Gemfile.lock was not changed 1`] = `null`;

exports[`bundler.updateArtifacts() returns null if Gemfile.lock was not changed 2`] = `
Array [
  Object {
    "cmd": "bundle lock --update ",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;

exports[`bundler.updateArtifacts() works explicit global binarySource 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "Updated Gemfile.lock",
      "name": "Gemfile.lock",
    },
  },
]
`;

exports[`bundler.updateArtifacts() works explicit global binarySource 2`] = `
Array [
  Object {
    "cmd": "bundle lock --update ",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;

exports[`bundler.updateArtifacts() works for default binarySource 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "Updated Gemfile.lock",
      "name": "Gemfile.lock",
    },
  },
]
`;

exports[`bundler.updateArtifacts() works for default binarySource 2`] = `
Array [
  Object {
    "cmd": "bundle lock --update ",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;
